{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 1653,
  "lineage": "72595055-eafa-30e2-9602-6145e3b551d9",
  "resources": [
    {
      "module": "module.instance",
      "mode": "data",
      "type": "aws_security_group",
      "name": "app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382777416:security-group/sg-07a85ee508236005b",
            "description": "app-container sg",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "mjy-dev-app-sg"
                ]
              }
            ],
            "id": "sg-07a85ee508236005b",
            "name": "terraform-20240620151958825900000001",
            "tags": {
              "Name": "mjy-dev-app-sg",
              "owner": "mjy"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d41972b5d5fc2af9"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "data",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382777416:security-group/sg-0cfd56b9c6aa58c5e",
            "description": "Protocol Type MySQL/Aurora",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "mjy-dev-db-sg"
                ]
              }
            ],
            "id": "sg-0cfd56b9c6aa58c5e",
            "name": "terraform-20240620152002732200000002",
            "tags": {
              "Name": "mjy-dev-db-sg",
              "owner": "mjy"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d41972b5d5fc2af9"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "data",
      "type": "aws_subnet",
      "name": "dev-app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382777416:subnet/subnet-039a23353bee4012b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.0.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "mjy-dev-PublicSubnet1"
                ]
              }
            ],
            "id": "subnet-039a23353bee4012b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382777416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "mjy-dev-PublicSubnet1",
              "createDate": "2024 06 20",
              "owner": "mjy"
            },
            "vpc_id": "vpc-0d41972b5d5fc2af9"
          }
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "data",
      "type": "aws_subnet",
      "name": "dev-db-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382777416:subnet/subnet-05a8336d870c55f64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "available_ip_address_count": 1019,
            "cidr_block": "10.0.40.0/22",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "mjy-dev-PrivateSubnet1"
                ]
              }
            ],
            "id": "subnet-05a8336d870c55f64",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382777416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "mjy-dev-PrivateSubnet1",
              "createDate": "2024 06 20",
              "owner": "mjy"
            },
            "vpc_id": "vpc-0d41972b5d5fc2af9"
          }
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev_app_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02bf8ce06a8ed6092",
            "arn": "arn:aws:ec2:us-east-2:992382777416:instance/i-06aeda6c8d283c050",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "mjy-dev-ssm-role",
            "id": "i-06aeda6c8d283c050",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mjy-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0269ae84240f533eb",
            "private_dns": "ip-10-0-0-203.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.203",
            "public_dns": "ec2-3-135-249-105.us-east-2.compute.amazonaws.com",
            "public_ip": "3.135.249.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ee10e30bbec6c584",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-07a85ee508236005b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-039a23353bee4012b",
            "tags": {
              "Name": "mjy-dev-app-instance"
            },
            "tags_all": {
              "Name": "mjy-dev-app-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07a85ee508236005b"
            ]
          },
          "dependencies": [
            "data.aws_availability_zones.AZS",
            "module.instance.aws_instance.dev_db_instance",
            "module.instance.data.aws_security_group.app-sg",
            "module.instance.data.aws_security_group.db-sg",
            "module.instance.data.aws_subnet.dev-app-subnet",
            "module.instance.data.aws_subnet.dev-db-subnet",
            "module.security-group.aws_security_group.app-sg",
            "module.security-group.aws_security_group.database-sg",
            "module.security-group.data.aws_vpc.vpc",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private-rts",
            "module.vpc.aws_route_table.public-rts",
            "module.vpc.aws_route_table_association.private-rt-associations",
            "module.vpc.aws_route_table_association.public-rt-associations",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev_db_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09040d770ffe2224f",
            "arn": "arn:aws:ec2:us-east-2:992382777416:instance/i-0af9429f8abeced76",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "mjy-dev-ssm-role",
            "id": "i-0af9429f8abeced76",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06cf8f1290858bc83",
            "private_dns": "ip-10-0-43-151.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.43.151",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a1c2e4d1486d77d7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0cfd56b9c6aa58c5e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a8336d870c55f64",
            "tags": {
              "Name": "mjy-dev-db-instance"
            },
            "tags_all": {
              "Name": "mjy-dev-db-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cfd56b9c6aa58c5e"
            ]
          },
          "dependencies": [
            "data.aws_availability_zones.AZS",
            "module.instance.data.aws_security_group.db-sg",
            "module.instance.data.aws_subnet.dev-db-subnet",
            "module.security-group.aws_security_group.app-sg",
            "module.security-group.aws_security_group.database-sg",
            "module.security-group.data.aws_vpc.vpc",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private-rts",
            "module.vpc.aws_route_table.public-rts",
            "module.vpc.aws_route_table_association.private-rt-associations",
            "module.vpc.aws_route_table_association.public-rt-associations",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382777416:vpc/vpc-0d41972b5d5fc2af9",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0bfd01b9f4bfaeb2a",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-02cd1a4a7bc031673",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "MJY_DEV_VPC"
                ]
              }
            ],
            "id": "vpc-0d41972b5d5fc2af9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0baa9bd97b18732a7",
            "owner_id": "992382777416",
            "tags": {
              "Name": "MJY_DEV_VPC",
              "createDate": "2024 06 20",
              "owner": "mjy"
            }
          }
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382777416:security-group/sg-07a85ee508236005b",
            "description": "app-container sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a85ee508236005b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20240620151958825900000001",
            "name_prefix": "terraform-",
            "owner_id": "992382777416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mjy-dev-app-sg",
              "owner": "mjy"
            },
            "tags_all": {
              "Name": "mjy-dev-app-sg",
              "owner": "mjy"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d41972b5d5fc2af9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.AZS",
            "module.security-group.data.aws_vpc.vpc",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private-rts",
            "module.vpc.aws_route_table.public-rts",
            "module.vpc.aws_route_table_association.private-rt-associations",
            "module.vpc.aws_route_table_association.public-rt-associations",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382777416:security-group/sg-0cfd56b9c6aa58c5e",
            "description": "Protocol Type MySQL/Aurora",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cfd56b9c6aa58c5e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07a85ee508236005b"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20240620152002732200000002",
            "name_prefix": "terraform-",
            "owner_id": "992382777416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mjy-dev-db-sg",
              "owner": "mjy"
            },
            "tags_all": {
              "Name": "mjy-dev-db-sg",
              "owner": "mjy"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d41972b5d5fc2af9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.AZS",
            "module.security-group.aws_security_group.app-sg",
            "module.security-group.data.aws_vpc.vpc",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private-rts",
            "module.vpc.aws_route_table.public-rts",
            "module.vpc.aws_route_table_association.private-rt-associations",
            "module.vpc.aws_route_table_association.public-rt-associations",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae8024c2df702c08",
            "arn": "arn:aws:ec2:us-east-2:992382777416:elastic-ip/eipalloc-0ae8024c2df702c08",
            "association_id": "eipassoc-026cc687d7d60a94b",
            "domain": "vpc",
            "id": "eipalloc-0ae8024c2df702c08",
            "network_border_group": "us-east-2",
            "network_interface": "eni-00d41f090f33abce8",
            "private_dns": "ip-10-0-0-166.us-east-2.compute.internal",
            "private_ip": "10.0.0.166",
            "public_dns": "ec2-3-130-13-119.us-east-2.compute.amazonaws.com",
            "public_ip": "3.130.13.119",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mjy-dev-eip0",
              "createDate": "2024 06 20",
              "owner": "mjy"
            },
            "tags_all": {
              "Name": "mjy-dev-eip0",
              "createDate": "2024 06 20",
              "owner": "mjy"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382777416:internet-gateway/igw-09803a74656462d3a",
            "id": "igw-09803a74656462d3a",
            "owner_id": "992382777416",
            "tags": {
              "Name": "MJY_DEV_IGW",
              "createDate": "2024 06 20",
              "owner": "mjy"
            },
            "tags_all": {
              "Name": "MJY_DEV_IGW",
              "createDate": "2024 06 20",
              "owner": "mjy"
            },
            "vpc_id": "vpc-0d41972b5d5fc2af9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae8024c2df702c08",
            "association_id": "eipassoc-026cc687d7d60a94b",
            "connectivity_type": "public",
            "id": "nat-07315dc07e90d6133",
            "network_interface_id": "eni-00d41f090f33abce8",
            "private_ip": "10.0.0.166",
            "public_ip": "3.130.13.119",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-039a23353bee4012b",
            "tags": {
              "Name": "mjy-dev-ngw0",
              "createDate": "2024 06 20",
              "owner": "mjy"
            },
            "tags_all": {
              "Name": "mjy-dev-ngw0",
              "createDate": "2024 06 20",
              "owner": "mjy"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.AZS",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382777416:route-table/rtb-0b88fbceaa0314c72",
            "id": "rtb-0b88fbceaa0314c72",
            "owner_id": "992382777416",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-07315dc07e90d6133",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mjy-dev-PrivateRouteTable1",
              "createDate": "2024 06 20",
              "owner": "mjy"
            },
            "tags_all": {
              "Name": "mjy-dev-PrivateRouteTable1",
              "createDate": "2024 06 20",
              "owner": "mjy"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d41972b5d5fc2af9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.AZS",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382777416:route-table/rtb-00c7a74330727f560",
            "id": "rtb-00c7a74330727f560",
            "owner_id": "992382777416",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-07315dc07e90d6133",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mjy-dev-PrivateRouteTable2",
              "createDate": "2024 06 20",
              "owner": "mjy"
            },
            "tags_all": {
              "Name": "mjy-dev-PrivateRouteTable2",
              "createDate": "2024 06 20",
              "owner": "mjy"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d41972b5d5fc2af9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.AZS",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382777416:route-table/rtb-08190f15b0e62518c",
            "id": "rtb-08190f15b0e62518c",
            "owner_id": "992382777416",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09803a74656462d3a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mjy-dev-PublicRouteTable1",
              "createDate": "2024 06 20",
              "owner": "mjy"
            },
            "tags_all": {
              "Name": "mjy-dev-PublicRouteTable1",
              "createDate": "2024 06 20",
              "owner": "mjy"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d41972b5d5fc2af9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.AZS",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382777416:route-table/rtb-0ecffedf87d28d0b1",
            "id": "rtb-0ecffedf87d28d0b1",
            "owner_id": "992382777416",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09803a74656462d3a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mjy-dev-PublicRouteTable2",
              "createDate": "2024 06 20",
              "owner": "mjy"
            },
            "tags_all": {
              "Name": "mjy-dev-PublicRouteTable2",
              "createDate": "2024 06 20",
              "owner": "mjy"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d41972b5d5fc2af9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.AZS",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb99d0120941f01f",
            "route_table_id": "rtb-0b88fbceaa0314c72",
            "subnet_id": "subnet-05a8336d870c55f64"
          },
          "dependencies": [
            "data.aws_availability_zones.AZS",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private-rts",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd9a1512e112d7c9",
            "route_table_id": "rtb-00c7a74330727f560",
            "subnet_id": "subnet-01f6ab2d021cf9211"
          },
          "dependencies": [
            "data.aws_availability_zones.AZS",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private-rts",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2db46a3559c7921",
            "route_table_id": "rtb-08190f15b0e62518c",
            "subnet_id": "subnet-039a23353bee4012b"
          },
          "dependencies": [
            "data.aws_availability_zones.AZS",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-rts",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe4de4adc2eed6ef",
            "route_table_id": "rtb-0ecffedf87d28d0b1",
            "subnet_id": "subnet-0ae1a6b9ac361e439"
          },
          "dependencies": [
            "data.aws_availability_zones.AZS",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-rts",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "mjy-dev-PrivateSubnet1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382777416:subnet/subnet-05a8336d870c55f64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.40.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a8336d870c55f64",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382777416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mjy-dev-PrivateSubnet1",
              "createDate": "2024 06 20",
              "owner": "mjy"
            },
            "tags_all": {
              "Name": "mjy-dev-PrivateSubnet1",
              "createDate": "2024 06 20",
              "owner": "mjy"
            },
            "vpc_id": "vpc-0d41972b5d5fc2af9"
          },
          "dependencies": [
            "data.aws_availability_zones.AZS",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "mjy-dev-PrivateSubnet2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382777416:subnet/subnet-01f6ab2d021cf9211",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.44.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f6ab2d021cf9211",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382777416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mjy-dev-PrivateSubnet2",
              "createDate": "2024 06 20",
              "owner": "mjy"
            },
            "tags_all": {
              "Name": "mjy-dev-PrivateSubnet2",
              "createDate": "2024 06 20",
              "owner": "mjy"
            },
            "vpc_id": "vpc-0d41972b5d5fc2af9"
          },
          "dependencies": [
            "data.aws_availability_zones.AZS",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "mjy-dev-PublicSubnet1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382777416:subnet/subnet-039a23353bee4012b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039a23353bee4012b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382777416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mjy-dev-PublicSubnet1",
              "createDate": "2024 06 20",
              "owner": "mjy"
            },
            "tags_all": {
              "Name": "mjy-dev-PublicSubnet1",
              "createDate": "2024 06 20",
              "owner": "mjy"
            },
            "vpc_id": "vpc-0d41972b5d5fc2af9"
          },
          "dependencies": [
            "data.aws_availability_zones.AZS",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "mjy-dev-PublicSubnet2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382777416:subnet/subnet-0ae1a6b9ac361e439",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae1a6b9ac361e439",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382777416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mjy-dev-PublicSubnet2",
              "createDate": "2024 06 20",
              "owner": "mjy"
            },
            "tags_all": {
              "Name": "mjy-dev-PublicSubnet2",
              "createDate": "2024 06 20",
              "owner": "mjy"
            },
            "vpc_id": "vpc-0d41972b5d5fc2af9"
          },
          "dependencies": [
            "data.aws_availability_zones.AZS",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382777416:vpc/vpc-0d41972b5d5fc2af9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00fa586de6ca69492",
            "default_route_table_id": "rtb-0baa9bd97b18732a7",
            "default_security_group_id": "sg-07ab382e8327d9c0e",
            "dhcp_options_id": "dopt-02cd1a4a7bc031673",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d41972b5d5fc2af9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0baa9bd97b18732a7",
            "owner_id": "992382777416",
            "tags": {
              "Name": "MJY_DEV_VPC",
              "createDate": "2024 06 20",
              "owner": "mjy"
            },
            "tags_all": {
              "Name": "MJY_DEV_VPC",
              "createDate": "2024 06 20",
              "owner": "mjy"
            }
          }
        }
      ]
    }
  ]
}